<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="bmi">BMI  Calculator</string>
    <string name="description">Body Mass Index (BMI) is a measure of body fat based on height and weight that applies to adult men and women</string>
    <string name="weight">Weight (kg)</string>
    <string name="height">Height (cm)</string>
    <string name="zero">00</string>
    <string name="calculate_bmi_again">Calculate BMI Again</string>
    <string name="your_bmi">Your BMI</string>
    <string name="calculate_your_bmi">Calculate your BMI</string>
</resources>