<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/ll_layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bmi"
                android:textSize="30sp"
                android:padding="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="16sp"
                android:padding="8dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_layout2"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_below="@id/ll_layout1"
            android:orientation="horizontal"
            android:weightSum="2">

            <ImageView
                android:id="@+id/iv_male"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:src="@drawable/ic_male"
                android:layout_weight="1"/>

            <ImageView
                android:id="@+id/iv_female"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:src="@drawable/ic_female"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_layout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_layout2"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:paddingTop="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weight"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/et_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/zero"
                    android:inputType="numberDecimal"
                    android:maxLength="4"
                    android:gravity="center_vertical"
                    android:layout_margin="16dp"
                    android:textSize="48sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:paddingTop="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/height"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/et_height"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/zero"
                    android:inputType="numberDecimal"
                    android:maxLength="4"
                    android:layout_margin="16dp"
                    android:textSize="48sp"/>
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btn_calculate_bmi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_layout3"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="14dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="14dp"
            android:layout_marginBottom="14dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/calculate_your_bmi" />

        <LinearLayout
            android:id="@+id/ll_bmi_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_calculate_bmi"
            android:layout_marginTop="30dp"
            android:visibility="gone"
            android:orientation="vertical"
            android:layout_centerHorizontal="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/your_bmi"/>

            <TextView
                android:id="@+id/tv_bmi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                android:textSize="32sp"
                android:textStyle="bold"
                tools:text="20.2"/>

            <TextView
                android:id="@+id/tv_bmi_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                android:textStyle="bold"
                tools:text="Over Weight" />

            <TextView
                android:id="@+id/tv_calculate_again"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/calculate_bmi_again"
                android:textColor="@color/light_violet"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold"/>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>